--- a/css/configuration.css
+++ b/css/configuration.css
@@ -148,3 +148,64 @@ nav a {
 .form-actions>a {
     color: #4285F4;
 }
+
+@media only screen and (min-width: 390px) and (max-width: 1023px) and (min-height: 844px) and (max-height: 1365px) {
+    .navbar {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: nowrap;
+        /* ← Impide que se baje a la siguiente línea */
+        height: 10px;
+    }
+
+    .nav-left {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        /* Espacio entre los enlaces */
+    }
+
+    .nav-right {
+        padding: 0px 0px;
+    }
+
+    .nav-left .nav-link {
+        display: inline-block;
+        align-items: center;
+        padding: 7px 10px;
+        font-size: 12px;
+    }
+
+    .search-input {
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        font-size: 10px;
+        padding: 4px 1px;
+        margin: 1px auto;
+        align-items: center;
+    }
+
+    .user-menu>label>img {
+        width: 27px;
+        align-items: center;
+        height: auto;
+    }
+
+    footer,
+    nav {
+        margin-top: auto;
+        text-align: center;
+        font-size: 0.9rem;
+        color: gray;
+        padding: 5px 20px;
+    }
+
+    nav a {
+        margin: 0px 2px;
+        text-decoration: none;
+        color: black;
+    }
+}
