--- a/css/register.css
+++ b/css/register.css
@@ -20,7 +20,7 @@ body {
   margin-bottom: 6%;
 }
 
-.form h2 {
+.registration-form h2 {
   display: flex;
   justify-content: center;
   font-size: 3.5em;
@@ -111,11 +111,13 @@ input {
   text-align: center;
 }
 
-.cta-buttons-sign-up a {
+.cta-buttons-sign-up button {
   background-color: #444;
   color: white;
-  padding: 10px 50px;
+  padding: 15px 60px;
   text-decoration: none;
+  font-size: 1em;
+  border: 0px solid #aaa;
 }
 
 footer,
@@ -133,16 +135,16 @@ nav a {
   color: black;
 }
 
-.form>hr {
+.registration-form>hr {
   margin: 0px 40%;
 }
 
 @media only screen and (min-width: 390px) and (max-width: 1023px) and (min-height: 844px) and (max-height: 1365px) {
-  .form h2 {
+  .registration-form h2 {
     font-size: 2.5em;
   }
 
-  .form h2 {
+  .registration-form h2 {
     font-size: 2em;
     text-align: center;
   }
