Paginas responsive. Ambas son sumamente parecidas con lo cual se upgradeo a responsive ambos de una vez

--- a/css/editRide.css
+++ b/css/editRide.css
@@ -218,7 +218,7 @@ nav a {
         justify-content: space-between;
         align-items: center;
         flex-wrap: nowrap;
-        /* ← Impide que se baje a la siguiente línea */
+        /* Impide que se baje a la siguiente línea */
         height: 10px;
     }
 
@@ -226,7 +226,6 @@ nav a {
         display: flex;
         flex-direction: row;
         gap: 10px;
-        /* Espacio entre los enlaces */
     }
 
     .nav-right {
@@ -268,5 +267,62 @@ nav a {
         margin: 0px 2px;
         text-decoration: none;
         color: black;
+    }
+
+    .form-group-left {
+        display: block;
+    }
+
+    .form-group-left>div {
+        display: flex;
+        align-items: center;
+        margin: 10px auto;
+    }
+
+    .form-group-days>div>label {
+        padding: 0px;
+    }
+
+    .form-group-days {
+        margin: auto 15px;
+    }
+
+
+    .form-group-inline {
+        margin: auto auto;
+        justify-content: space-between;
+        gap: 12px;
+    }
+
+    .vehicle-details>div {
+        max-width: 125px;
+        padding: 1px 1px;
+        margin: auto auto;
+    }
+
+    .vehicle-details {
+        justify-content: unset;
+        padding: 30px 0px;
+        margin: auto 15px;
+    }
+
+    .edit-ride-main>p {
+        margin-left: 15px;
+    }
+
+    .form-actions {
+        margin: auto 15px;
+    }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1649px) and (min-height: 1366px) {
+    .edit-ride-section {
+        height: 79%;
+    }
+}
+
+@media only screen and (min-width: 1650px) and (min-height: 1050px) {
+    .edit-ride-section {
+        height: 72%;
     }
 }
