--- a/css/newRide.css
+++ b/css/newRide.css
@@ -305,3 +305,120 @@ nav a {
         color: black;
     }
 }
+
+@media only screen and (min-width: 390px) and (max-width: 1023px) and (min-height: 844px) and (max-height: 1365px) {
+    .navbar {
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: nowrap;
+        /* Impide que se baje a la siguiente línea */
+        height: 10px;
+    }
+
+    .nav-left {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+    }
+
+    .nav-right {
+        padding: 0px 0px;
+    }
+
+    .nav-left .nav-link {
+        display: inline-block;
+        align-items: center;
+        padding: 7px 10px;
+        font-size: 12px;
+    }
+
+    .search-input {
+        border-radius: 6px;
+        border: 1px solid #ccc;
+        font-size: 10px;
+        padding: 4px 1px;
+        margin: 1px auto;
+        align-items: center;
+    }
+
+    .user-menu>label>img {
+        width: 27px;
+        align-items: center;
+        height: auto;
+    }
+
+    footer,
+    nav {
+        margin-top: auto;
+        text-align: center;
+        font-size: 0.9rem;
+        color: gray;
+        padding: 5px 20px;
+    }
+
+    nav a {
+        margin: 0px 2px;
+        text-decoration: none;
+        color: black;
+    }
+
+    .form-group-left {
+        display: block;
+    }
+
+    .form-group-left>div {
+        display: flex;
+        align-items: center;
+        margin: 10px auto;
+    }
+
+    .form-group-days>div>label {
+        padding: 0px;
+    }
+
+    .form-group-days {
+        margin: auto 15px;
+    }
+
+
+    .form-group-inline {
+        margin: auto auto;
+        justify-content: space-between;
+        gap: 12px;
+    }
+
+    .vehicle-details>div {
+        max-width: 125px;
+        padding: 1px 1px;
+        margin: auto auto;
+    }
+
+    .vehicle-details {
+        justify-content: unset;
+        padding: 30px 0px;
+        margin: auto 15px;
+    }
+
+    .new-ride-main>p {
+        margin-left: 15px;
+    }
+
+    .form-actions {
+        margin: auto 15px;
+    }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1649px) and (min-height: 1366px) {
+    .new-ride-section {
+        height: 79%;
+    }
+}
+
+@media only screen and (min-width: 1650px) and (min-height: 1050px) {
+    .new-ride-section {
+        height: 72%;
+    }
+}
