--- a/css/searchRides.css
+++ b/css/searchRides.css
@@ -227,7 +227,7 @@ nav a {
         align-items: center;
     }
 
-    .user-menu>label>img {
+    .nav-right>img {
         width: 27px;
         align-items: center;
         height: auto;
