--- a/css/newRide.css
+++ b/css/newRide.css
@@ -245,6 +245,10 @@ nav a {
     color: black;
 }
 
+.places {
+    padding: 9px 4px;
+}
+
 @media only screen and (min-width: 390px) and (max-width: 1023px) and (min-height: 844px) and (max-height: 1365px) {
     .navbar {
         margin: 0 auto;
