--- a/css/editProfile.css
+++ b/css/editProfile.css
@@ -321,7 +321,11 @@ nav a {
 
 @media only screen and (min-width: 1024px) and (max-width: 1649px) and (min-height: 1366px) {
     .form {
-        height: 79%;
+        height: 47%;
+    }
+
+    .header img {
+        margin: 10px auto;
     }
 
     .navbar {
@@ -362,6 +366,18 @@ nav a {
         margin: -12px 10px;
     }
 
+    .form-title hr {
+        margin: 0px 43%;
+        margin-bottom: 1%;
+    }
+
+    .form-body {
+        gap: 3px;
+    }
+
+    .form-actions {
+        padding: 20px 1px;
+    }
 }
 
 @media only screen and (min-width: 1650px) and (min-height: 1050px) {
