--- a/css/myRides.css
+++ b/css/myRides.css
@@ -180,6 +180,10 @@ nav a {
 }
 
 @media only screen and (min-width: 390px) and (max-width: 1023px) and (min-height: 844px) and (max-height: 1365px) {
+    .rides-section {
+        height: 76%;
+    }
+
     .navbar {
         margin: 0 auto;
         display: flex;
@@ -244,18 +248,18 @@ nav a {
 
     .rides-table th,
     .rides-table td {
-        padding: 4px;
+        padding: 1px;
     }
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1649px) and (min-height: 1366px) {
     .rides-section {
-        height: 79%;
+        height: 45%;
     }
 }
 
 @media only screen and (min-width: 1650px) and (min-height: 1050px) {
     .rides-section {
-        height: 72%;
+        height: 58%;
     }
 }
