--- a/css/bookings.css
+++ b/css/bookings.css
@@ -6,6 +6,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+:root {
+    --primary-color: #4285F4;
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -55,7 +59,7 @@ body {
 }
 
 .nav-link.active {
-    background-color: #4285F4;
+    background-color: var(--primary-color);
     color: white;
 }
 
