--- a/css/configuration.css
+++ b/css/configuration.css
@@ -6,6 +6,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+:root {
+    --primary-color: #4285F4;
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -61,7 +65,7 @@ body {
 }
 
 .nav-link.active {
-    background-color: #4285F4;
+    background-color: var(--primary-color);
     color: white;
 }
 
@@ -184,7 +188,7 @@ nav a {
 .form-actions>button {
     border: 1px solid #555;
     padding: 10px 80px;
-    background-color: #4285F4;
+    background-color: var(--primary-color);
     color: white;
 }
 
