--- a/css/editRide.css
+++ b/css/editRide.css
@@ -6,6 +6,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+:root {
+    --primary-color: #4285F4;
+}
+
 .header {
     display: flex;
     justify-content: center;
@@ -230,7 +234,7 @@ body {
 .form-actions>button {
     border: 1px solid #555;
     padding: 10px 80px;
-    background-color: #4285F4;
+    background-color: var(--primary-color);
     color: white;
 }
 
